# RENGA

./: .env.example  .gitignore  .mcp.json  README.md  api.py  demo.py  function_app.py  local.settings.json  main.py  pyproject.toml  recommend.py  requirements-api.txt  requirements.txt  smoke_test.py
catalog/: skills.json
docs/: architecture.md  db_schema.md  getting_started.md
functions/aggregator/: core.py  function_app.py  local.settings.json.example  requirements.txt
output/skills/: Jupyterノートブック作成_ed84d61b.md  Neo4jトラブルシューティング_eb39caba.md  Ollama利用状況の調査・監視_9cab11d8.md  Ollama操作依頼_efe9ce65.md  Ollama設定検証支援_c9176304.md  URL確認・操作依頼_0c4be4e3.md  nanoclaw管理作業_66268dac.md  アクセス権限確認_cf7c699b.md  アーキテクチャ設計レビュー_4cee8e0b.md  エラーメッセージ要約_fb33d2b8.md  クラスタ39_2ac0fb6d.md  クラスタ40_596c4494.md  コマンド実行指示_d6f2efd4.md  コードベース探索_49853207.md  コードベース探索_76aeeadf.md  コードベース探索_97249e3d.md  コードベース探索・文書化_b2050069.md  コードベース調査_0e090429.md  サイト構造調査_05e4367a.md  セッションログの構造化設計_5b88e676.md  ソース検証と整合性確認_27a55150.md  タスク再開・継続依頼_4f89a9c2.md  タスク進捗確認と指示_85055d7b.md  テスト実行・修正依頼_908e15eb.md  データ構造調査_3b4bee82.md  トレースファイル完全抽出_86643738.md  ドキュメント作成・更新_31eed290.md  ノートブック作成指示_afac2b72.md  ノートブック改善指示_d2f7947c.md  バックグラウンドタスク監視_17444af9.md  バッチ結果確認_57cdf999.md  パイプライン分析・構築_f97e774e.md  パイプライン実行指示_6dd89eb0.md  ファイル構造解析_6d0a9b1a.md  フォルダ構造調査_0660781e.md  プロット要素の日英翻訳_1138efd3.md  モデル設定調整_19a30644.md  モデル選定・検証_586dd5ac.md  リポジトリ探索分析_5ee7e800.md  リポジトリ管理相談_5013c116.md  (+50 more)
scripts/: benchmark_clustering.py  e2e_test.py  setup_cosmos.py
src/skill_hub/: __main__.py  catalog.py  contributors.py  cosmos_catalog.py  (+4 more)
(+110 files in other folders)
