[project]
name = "renga"
version = "0.1.0"
description = "社内AIスキル循環エージェント — Microsoft Agent Hackathon 2026"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-functions>=1.24.0",
    "fastapi>=0.136.1",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.3",
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "uvicorn[standard]>=0.47.0",
    "mcp>=1.0.0",
]

[tool.uv]
package = false
