[project]
name = "renga"
version = "0.1.0"
description = "社内AIスキル循環エージェント — Microsoft Agent Hackathon 2026"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "mcp>=1.0.0",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "uvicorn[standard]>=0.47.0",
]

[project.optional-dependencies]
org = [
    "azure-cosmos>=4.15.0",
]

[tool.uv]
package = false
